discussion/kv_engine/177742/177742_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: expose sstable writer

Change-Id: Id698b34c80e96a34938be3c745a73840581bf863

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-07-19 13:57:52.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-19 14:05:14.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47920/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(567): error C2039: "SSTableWriteBufferSize": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47920/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19088/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28: error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
    configuration.magmaCfg.SSTableWriteBufferSize =
                           ^~~~~~~~~~~~~~~~~~~~~~
                           SSTableWriterBufferSize
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:944:12: note: "SSTableWriterBufferSize" declared here
    size_t SSTableWriterBufferSize{1024 * 512};
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19088/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19088/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40263/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40263/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8774/ : FAILURE

Compile error at [2022-07-19T13:58:54.221Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8774/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8870/ : FAILURE

Compile error at [2022-07-19T14:00:39.325Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: ?struct magma::Magma::Config? has no member named ?SSTableWriteBufferSize?; did you mean ?SSTableWriterBufferSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8870/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20993/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_magma_sstable_writer_buffer_size from stat group 
[2022-07-19T14:03:35.057Z] Unexpected stat: ep_magma_sstable_writer_buffer_size from stat group config
[2022-07-19T14:03:35.057Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7803 Test failed: `stats error" (missing stats)
[2022-07-19T14:03:35.057Z] (58 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20993/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21351/ : FAILURE

Compile error at [2022-07-19T13:59:40.357Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: ?struct magma::Magma::Config? has no member named ?SSTableWriteBufferSize?; did you mean ?SSTableWriterBufferSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21351/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22050/ : FAILURE

Compile error at [2022-07-19T13:59:10.371Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22050/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20238/ : FAILURE

Compile error at [2022-07-19T14:01:39.986Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20238/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29387/ : FAILURE

Compile error at [2022-07-19T13:59:19.467Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SSTableWriteBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29387/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18250/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
